# CyberLink2Android

AppFramework/: build.gradle
AppFramework/src/androidTest/java/com/scorpio/framework/: ExampleInstrumentedTest.java
AppFramework/src/main/: AndroidManifest.xml
AppFramework/src/main/java/com/scorpio/framework/business/handler/: DefaultBusinessOpt.java  SimpleBusinessOpt.java
AppFramework/src/main/java/com/scorpio/framework/business/model/: BusinessContent.java  FailTaskTag.java
AppFramework/src/main/java/com/scorpio/framework/business/protocol/: BusinessCenter.java  BusinessDispatcher.java  BusinessManager.java  BusinessOperationMap.java  ContentExpandManager.java  ContentExpandServiceType.java  CoreManager.java  HttpCenter.java  IBusinessOperation.java  MessageDataKey.java  ResultModel.java  SimpleEvent.java  SimpleUIEvent.java
AppFramework/src/main/java/com/scorpio/framework/business/protocol/http/: BusinessProtocolURL.java  HttpProtocolEngine.java  IHttpProtocolEngine.java
AppFramework/src/main/java/com/scorpio/framework/config/: CoreSchema.java
AppFramework/src/main/java/com/scorpio/framework/core/: CoreApplication.java  CoreAsyncTask.java  CoreEngine.java  CoreManager.java  CoreService.java  FileManager.java  NetObserver.java  SerialExecutor.java  UICenterDef.java  UIEvent.java
AppFramework/src/main/java/com/scorpio/framework/data/dm/: DMIndexInterface.java  DataManagerInterface.java
AppFramework/src/main/java/com/scorpio/framework/net/: ConnectManager.java  IConnectResultListener.java
AppFramework/src/main/java/com/scorpio/framework/net/http/: HPackage.java  HPackageFactory.java  HttpBoss.java  HttpConfigureSchema.java  HttpConnectionManager.java  HttpManagerAdapter.java  HttpRequest.java
AppFramework/src/main/java/com/scorpio/framework/net/http/interfaces/: AbstractHttpPostUploadEntity.java  DownloadMessageListener.java  HResponse.java  HandleMessageListener.java  HttpFilePostUploadEntity.java  HttpPostUploadEntity.java  HttpRequestListener.java  HttpRequestProgressListener.java  HttpResponseException.java  IHttpOperation.java  IHttpProtocol.java  MessageListener.java
AppFramework/src/main/java/com/scorpio/framework/net/http/protocol/: HttpProtocolManager.java  HttpProtocolUtils.java  HttpWorker.java  IErrno.java  SimpleHttpHandle.java
AppFramework/src/main/java/com/scorpio/framework/utils/: Base64.java  CrashHandler.java  DateTricks.java  ExceptionTricks.java  FileUtil.java  IOTricks.java  JsonTricks.java  PreferenceUtil.java  ScoLog.java  ScreenUtil.java  SimpleCrypto.java  SystemUtil.java  TextTricks.java
AppFramework/src/test/java/com/scorpio/framework/: ExampleUnitTest.java
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/ytx/cyberlink2android/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/dlna/: CMakeLists.txt
app/src/main/cpp/dlna/include/: com_ytx_cyberlink2android_dlna_dmc_AVMediaControllerNative.h  examples.h  native-lib-dmc.h
app/src/main/cpp/dlna/src/: native-lib-dmc.cpp  native-lib.cpp
app/src/main/cpp/mupnp/: CMakeLists.txt
app/src/main/cpp/mupnp/src/: build_android.sh  config.h  config.status  mupnp.pc
app/src/main/cpp/mupnp/src/src/mupnp/util/: thread.c
app/src/main/java/com/ytx/cyberlink2android/: MainActivity.java
app/src/main/java/com/ytx/cyberlink2android/activity/: AVMediaControllerActivity.java  BaseActivity.java  SettingActivity.java  SimpleBarRootActivity.java
app/src/main/java/com/ytx/cyberlink2android/adapter/: BaseRecyclerAdapter.java
app/src/main/java/com/ytx/cyberlink2android/application/: ClientInfo.java  LinkApplication.java
app/src/main/java/com/ytx/cyberlink2android/base/: ActivityHelper.java
app/src/main/java/com/ytx/cyberlink2android/base/fragment/: SimpleDialogFragment.java
app/src/main/java/com/ytx/cyberlink2android/base/listener/: SimpleDialogClickListener.java
app/src/main/java/com/ytx/cyberlink2android/constants/: ActivityResultConst.java  ConstKey.java  KeyConst.java
app/src/main/java/com/ytx/cyberlink2android/dlna/dmc/: AVMediaController.java  AVMediaControllerNative.java  DmcCore.java
app/src/main/java/com/ytx/cyberlink2android/scorpio/business/cfg/: AppConfig.java  BusinessCfg.java  Constant.java  MessageTypeID.java
app/src/main/java/com/ytx/cyberlink2android/scorpio/business/data/common/: IError.java
app/src/main/java/com/ytx/cyberlink2android/scorpio/business/data/flow/: CheckFlowData.java  CheckFlowModel.java
app/src/main/java/com/ytx/cyberlink2android/scorpio/business/data/update/: CheckUpdateRequestModel.java  CheckUpdateResponseModel.java
app/src/main/java/com/ytx/cyberlink2android/scorpio/business/http/: HttpConnectedCfg.java  URLCfg.java
app/src/main/java/com/ytx/cyberlink2android/scorpio/business/opt/update/: VersionResponseEntity.java  VersionUpgradeForceBusinessOpt.java
app/src/main/java/com/ytx/cyberlink2android/scorpio/ui/uicenter/: ModelUIEvent.java  UICenter.java  UIEventCfg.java
app/src/main/java/com/ytx/cyberlink2android/utils/: Msg.java  PreferenceUtil.java  ScreenUtil.java  Utils.java  WifiAdmin.java  YtxLog.java
app/src/main/java/com/ytx/cyberlink2android/view/: LabelLayout.java  PullToRefreshLayout.java  RefreshImageView.java  ViewRotateLoading.java  YtxSwitch.java
app/src/main/res/color/: btn_simple_dialog_left.xml  btn_simple_dialog_right.xml
app/src/main/res/drawable/: bg_simple_dialog.xml  btn_simple_dialog_bottom.xml  btn_simple_dialog_left.xml  btn_simple_dialog_right.xml
app/src/main/res/layout/: activity_base.xml  activity_file_explorer.xml  activity_main.xml  activity_media_controller.xml  activity_setting.xml  fragment_file_list.xml  fragment_simple_dialog.xml  item_device_login_message.xml  line_horizontal.xml  refresh_layout_footer.xml  refresh_layout_header.xml
app/src/main/res/values/: colors.xml  ids.xml  strings.xml
app/src/test/java/com/ytx/cyberlink2android/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
